# space-ml-sim

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .zenodo.json  CITATION.cff  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  commercial-license.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  spenvis-validation.yml
benchmarks/: resnet18_orbital.py
docs/: chip_selection_guide.md
examples/: 01_basic_constellation.py  02_radiation_fault_sweep.py  03_tmr_comparison.py  04_reproduce_published_seu.py
notebooks/: 01_orbital_fault_injection.ipynb  02_tmr_fault_tolerance.ipynb  03_constellation_distributed_inference.ipynb  04_cubesat_to_venus_mission.ipynb
scripts/: traction_monitor.py
src/space_ml_sim/: __init__.py  cli.py
src/space_ml_sim/analysis/: __init__.py  mission_analysis.py  power_budget.py  shielding_optimizer.py  trade_study.py
src/space_ml_sim/comms/: __init__.py  link_budget.py
src/space_ml_sim/compute/: __init__.py  checkpoint.py  distributed.py  fault_injector.py  federated.py  inference_node.py  model_parallel.py  onnx_adapter.py  quantization.py  scheduler.py  tmr.py  tmr_recommender.py  transformer_fault.py
src/space_ml_sim/core/: __init__.py  clock.py  constellation.py  constellation_presets.py  orbit.py  poliastro_adapter.py  satellite.py  tle.py
src/space_ml_sim/data/: __init__.py  rad_test_data.py  weibull_fit.py
src/space_ml_sim/environment/: __init__.py  comms.py  dose_depth.py  ground_station.py  heliocentric_radiation.py  isl_network.py  power.py  radiation.py  radiation_uncertainty.py  sel_model.py  solar_cycle.py  solar_particle_event.py  thermal.py  thermal_cycling.py  timeline.py
src/space_ml_sim/metrics/: __init__.py  mission_budget.py  monte_carlo.py  performance.py  reliability.py
src/space_ml_sim/models/: __init__.py  chip_profiles.py  rad_profiles.py
src/space_ml_sim/reports/: __init__.py  ecss_report.py  milstd_report.py  rtm.py
src/space_ml_sim/viz/: __init__.py  ground_track.py  heatmap.py  plots.py
tests/: test_accuracy_validation.py  test_checkpoint.py  test_chip_profiles.py  test_cli.py  test_cli_expanded.py  test_clock.py  test_comms.py  test_constellation.py  test_constellation_presets.py  test_cross_validation.py  test_distributed_inference.py  test_dose_depth.py  test_ecss_report.py  test_fault_injector.py  test_federated_learning.py  test_ground_station.py  test_ground_track.py  test_heatmap.py  test_heliocentric_radiation.py  test_inference_node.py  test_isl_network.py  test_link_budget.py  test_meo_geo_radiation.py  test_metrics.py  test_milstd_report.py  test_mission_analysis.py  test_mission_budget.py  test_model_parallel.py  test_monte_carlo_reliability.py  test_onnx_adapter.py  test_orbit.py  test_poisson_validation.py  test_poliastro_adapter.py  test_power.py  test_power_budget.py  test_published_seu_reproduction.py  test_quantization.py  test_rad_test_data.py  test_radiation.py  test_radiation_uncertainty.py  (+20 more)
