[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "space-ml-sim"
version = "0.4.0"
description = "Simulation framework for AI inference on orbital satellite constellations"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "space-ml-sim contributors" }]
keywords = ["space", "satellite", "AI", "simulation", "radiation", "fault-tolerance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "sgp4>=2.22",
    "torch>=2.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "pre-commit>=3.0",
]
onnx = ["onnxruntime>=1.16", "onnx>=1.14"]
poliastro = ["poliastro>=0.17", "astropy>=5.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert is fine in non-production simulation code

[tool.pytest.ini_options]
addopts = "--strict-markers -x"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: performance benchmark tests",
]
